Fix !AccordionContainer rendering problems, by properly accounting for margin/border/padding and by dealing w/the fact that during the animation, on claro, need to account for two blue borders wrapping around the two "active" children.   See comments in code for more details.
This fixes the problem where the animation doesn't work well when there's lots of padding on the child !ContentPane, and also the problem where the blue trim underneath a child !ContentPane (claro only) would disappear during the animation.

Also, added correct handling for race condition when another pane is selected or the accordion is destroyed while an animation is in progress.

IE6 and IE7 have overflow problems with this new design (the overflow: hidden isn't taking effect), but rather than fix the problem I just disabled the animation for those browsers.

Fixes #4017, #7389, #9141 !strict.

Also removed some workaround code for #11415, and from [21426] (#10527), that seems to no longer be needed.


git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22677 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/layout/AccordionContainer.css
+++ b/themes/claro/layout/AccordionContainer.css
@@ -3,24 +3,24 @@
  * Styling AccordionContainer basically means styling the accordion pane (dijitAccordionInnerContainer)
  * and the title inside of it (dijitAccordionTitle).   There are 4 basic states to style:
  * 
- * 1. accordion bounding container
- * 		.dijitAccordionContainer - container for the whole accordion 
- * 
- * 2. closed pane (and default styling): 
+ * 1. closed pane (and default styling): 
  * 		.dijitAccordionInnerContainer - container for each accordion child
  * 		.dijitAccordionTitle - title for each accordion child
  *
- * 3. active closed pane (ie, mouse down on a title bar)
+ * 2. active closed pane (ie, mouse down on a title bar)
  * 		.dijitAccordionInnerContainerActive - for background-color, border
  * 		.dijitAccordionInnerContainerActive dijitAccordionTitle - for text color
  * 
- * 4. open pane (expanded child)
+ * 3. open pane (expanded child)
+ *		.dijitAccordionChildWrapper - wraps around the child widget (typically ContentPane)
+ *			setting a margin so that there's blue trim all the way around the child
+ *
  * 		These rules need to override the closed pane active:
  *
  * 		.dijitAccordionInnerContainerSelected - for background-color, border
  * 		.dijitAccordionInnerContainerSelected .dijitAccordionTitle - for text color
  * 
- * 5. hovered pane, open or closed
+ * 4. hovered pane, open or closed
  * 		The selectors below affect hovering over both a closed pane (ie, hovering a title bar),
  * 		and hovering over an open pane.   Also, treat mouse down on an open pane as a hover:
  *
@@ -51,14 +51,17 @@
 .dj_ie6 .claro .dijitAccordionTitle {
 	background-image: none;
 }
-.claro .dijitAccordionContainer .dijitAccordionContainer-child {
-	background-color:#fff;
-	/*
-	 * border style need to be !important to override the style "border:medium none !important"
-	 * in class ".dijitTabPane, .dijitStackContainer-child, .dijitAccordionContainer-child"
+.claro .dijitAccordionContainer .dijitAccordionChildWrapper {
+	/* this extends the blue trim styling of the title bar to wrapping around the node.
+	 * done by setting margin
 	 */
-	border:1px solid #92bce1 !important;
+	background-color:#fff;
+	border:1px solid #92bce1;
 	margin: 0px 2px 2px;
+}
+	
+.claro .dijitAccordionContainer .dijitAccordionContainer-child {
+	/* this is affecting the child widget itself */
 	padding: 9px;
 }
 
@@ -99,8 +102,8 @@
 	-webkit-transition-duration:.2s;
 }
 
-.claro .dijitAccordionInnerContainerSelectedHover .dijitAccordionContainer-child,
-.claro .dijitAccordionInnerContainerSelectedActive .dijitAccordionContainer-child {
+.claro .dijitAccordionInnerContainerSelectedHover .dijitAccordionChildWrapper,
+.claro .dijitAccordionInnerContainerSelectedActive .dijitAccordionChildWrapper {
 	background-color:#ffffff;
 	border:1px solid #769DC0 !important;
 	-webkit-box-shadow:inset 0px 0px 3px rgba(0, 0, 0, .25);
